# server/model/result/common.go
@@ -1,12 +1,15 @@
 package result
 
-import "time"
+import (
+	"time"
+
+	"github.com/alvinhtml/gin-manager/server/model/request"
+)
 
 type PageResult struct {
 	List  interface{} `json:"list"`
 	Total int64       `json:"total"`
-	Page  int         `json:"page"`
-	Size  int         `json:"pageSize"`
+	request.PageQuery
 }
 
 type Token struct {
